# openmonero

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  main.cpp
.circleci/: config.yml
cmake/: CodeCoverage.cmake  FindMYSQL.cmake  FindMonero.cmake  FindMySQL++.cmake  FindRestbed.cmake  MyUtils.cmake  ProjectMonero.cmake
config/: config.json
ext/: CMakeLists.txt  ThreadPool.hpp  ThreadSafeQueue.hpp  lmdb++.h
ext/restbed/: CMakeLists.txt
ext/restbed/cmake/: configuration.cmake  manifest.cmake
ext/restbed/cmake/modules/: Findasio.cmake  Findkashmir.cmake
ext/restbed/dependency/kashmir/: cli.cpp
ext/restbed/dependency/kashmir/gui/ios/Model/: UUIDModel.h  UUIDModel.mm
ext/restbed/dependency/kashmir/gui/ios/Model/kashmir/: iofwd.h  md5.h  md5gen.h  randomstream.h  sha1.h  sha1gen.h  uuid.h  uuidgen.h
ext/restbed/dependency/kashmir/gui/ios/Model/kashmir/system/: abstractrandom.h  ccmd5.h  ccsha1.h  devrand.h  devrandom.h  iosrandom.h  winrand.h  winrandom.h
ext/restbed/dependency/kashmir/gui/ios/View/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m
ext/restbed/dependency/kashmir/gui/ios/View/Supporting Files/: MainStoryboard.storyboard  iTunesArtwork  main.m  uuid-Info.plist  uuid-Prefix.pch
ext/restbed/dependency/kashmir/gui/ios/View/Supporting Files/Settings.bundle/: Root.plist
ext/restbed/dependency/kashmir/gui/ios/uuid.xcodeproj/: project.pbxproj
ext/restbed/dependency/kashmir/gui/ios/uuid.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ext/restbed/dependency/kashmir/gui/ios/uuid.xcodeproj/project.xcworkspace/xcuserdata/kenneth.xcuserdatad/: UserInterfaceState.xcuserstate
ext/restbed/dependency/kashmir/gui/ios/uuid.xcodeproj/xcuserdata/kenneth.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
ext/restbed/dependency/kashmir/gui/ios/uuid.xcodeproj/xcuserdata/kenneth.xcuserdatad/xcschemes/: uuid.xcscheme  xcschememanagement.plist
ext/restbed/dependency/kashmir/gui/wx/: app.cpp  app.h  frame.cpp  frame.h  ooid.cpp
ext/restbed/dependency/kashmir/kashmir/: array.h  md5.h  md5_gen.h  randomstream.h  sha1.h  sha1_gen.h  unique.h  uuid.h  uuid_gen.h
ext/restbed/dependency/kashmir/kashmir/system/: abstractrandom.h  ccmd5.h  ccsha1.h  devrand.h  devrandom.h  iosrandom.h  sslmd5.h  winrand.h  winrandom.h
ext/restbed/source/corvusoft/restbed/: request.cpp
html/: api.json  index.html
html/bower_components/moment/min/: moment-with-locales.min.js
html/css/: screen.css
html/css_2/: moncrypt.webflow.css  normalize.css  webflow.css
html/js/: app.js  cn_util.js  config.js  mnemonic.js  routes.js  webflow.js
html/js/controllers/: account.js  account_overview.js  generate_wallet.js  import_account.js  import_wallet.js  latest_blocks.js  latest_transactions.js  login.js  receive_coins.js  send_coins.js  temp.js  top_bar.js  transaction_details.js  transactions.js  vanity_address.js  version.js
html/js/directives/: clipboard.js  forms.js  modal.js  qr_code.js  qr_scanner.js  scroll.js  transacation.js  transaction.html
html/js/filters/: money.js  payment_uri.js  time.js
html/js/lib/: biginteger.js  mymonero-core.js  qrcode.min.js
html/js/lib/mymonero_core_js/monero_utils/: MyMoneroCoreCpp.wasm  MyMoneroCoreCpp_WASM.wasm
html/js/services/: account.js  apicalls.js  modal.js
html/modals/: idle-timeout.html  idle-warning.html  import-wallet.html  imported-account.html  login.html  openalias-confirm.html  review-account-details.html  review-login-key.html  transaction-details.html  transfer-confirm.html
html/partials/: account-balance.html  account-nav.html  account-overview.html  account-transactions.html  create-your-account.html  home.html  privacy-policy.html  receive-coins.html  send-coins.html  support.html  terms.html
scripts/: README.md  README.py  batch_import_test.py
sql/: README.md  openmonero.sql  openmonero_test.sql  rest.sql  xcashdb.sql  yourmonero.sql
src/: BlockchainSetup.cpp  BlockchainSetup.h  CMakeLists.txt  CmdLineOptions.cpp  CurrentBlockchainStatus.cpp  CurrentBlockchainStatus.h  MicroCore.cpp  MicroCore.h  MySqlAccounts.cpp  MySqlAccounts.h  MySqlConnector.cpp  MySqlConnector.h  MysqlPing.cpp  MysqlPing.h  OpenMoneroRequests.cpp  OpenMoneroRequests.h  OutputInputIdentification.cpp  OutputInputIdentification.h  PaymentSearcher.hpp  RPCCalls.cpp  RPCCalls.h  RandomOutputs.cpp  RandomOutputs.h  ThreadRAII.cpp  ThreadRAII.h  TxSearch.cpp  TxSearch.h  TxUnlockChecker.cpp  TxUnlockChecker.h  UniversalIdentifier.cpp  UniversalIdentifier.hpp  YourMoneroRequests.cpp  YourMoneroRequests.h  monero_headers.h  mylmdb.h  om_log.h  rpccalls.cpp  rpccalls.h  ssqls_sql.h  ssqlses.cpp  (+5 more)
src/db/: MySqlAccounts.cpp  MySqlAccounts.h  MySqlConnector.h  MysqlPing.cpp  MysqlPing.h  ssqlses.cpp  ssqlses.h
tests/: CMakeLists.txt  JsonTx.cpp  JsonTx.h  README.md  bcstatus_tests.cpp  helpers.h  microcore_tests.cpp  mocks.h  mysql_tests.cpp  txsearch_tests.cpp  universalidentifier_tests.cpp
tests/res/: config_ill_formed.json  outputs_stagenet_2_56Vbjcz.csv  outputs_stagenet_56Vbjcz.csv  outputs_testnet_9wq792k9.csv  tx_snet_4b40cfb2fdce2cd57a834a380901d55d70aba29dad13ac6c4dc82a895f439ecf.hex
tests/res/tx/: README.md
